@@ -1,3 +1,9 @@
+2007-03-30  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.cpp:
+
+	No need for FP code.
+
 2007-03-28  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
